Feature ETP-772: Add and update java tests